# DumbLang

./: .gitignore  CODE_OF_CONDUCT.md  README.md
.github/workflows/: ci.yml
ci/: Dockerfile  build-and-test.sh  common.sh  docker_run.sh  format.sh  requirements.in  requirements.txt  setup.sh
ci/conan-profiles/linux/: Debug  base  release
ci/conan-profiles/mac/: base
examples/: example.dumb
src/: CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  conanfile.txt  lexer.cpp  lexer.h  main.cpp  parser.cpp  test_lexer.cpp  test_parser.cpp
src/conan-profiles/: release
src/dumblang/: CMakeLists.txt  main.cpp
src/include/: lexer.h  parser.h
src/libdumblang/: CMakeLists.txt  ast.cpp  ast_dumper.cpp  compile.cpp  module.cpp  module_impl.cpp  parser.cpp
src/libdumblang/include/: ast.h  ast_dumper.h  lexer.h  module.h  module_impl.h  parser.h  traits.h  version.h
src/libdumblang/tests/: CMakeLists.txt  test_ast.cpp  test_lexer.cpp  test_parser.cpp
